# HskaSystemProgramming

./: .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt  CorrespondentStates.txt  ParserTest.sh  README.md  ScannerTest.sh  debugger manual.txt  makefile
Automat/: CMakeLists.txt  makefile
Automat/includes/: Syntax.h
Automat/src/: Syntax.cpp  TestAutomat.cpp
Buffer/: makefile
Parser/: makefile  out.txt
Parser/debug/: ParserTest
Parser/includes/: CheckType.h  Node.h  Parser.h
Parser/src/: Node.cpp  Parser.cpp  TestParser.cpp
Scanner/: makefile  out.txt  test.txt
Scanner/debug/: ScannerTest
Scanner/includes/: Information.h  Scanner.h  Token.h
Scanner/src/: Information.cpp  Scanner.cpp  TestScanner.cpp  Token.cpp
Symboltable/: makefile
Symboltable/includes/: Symboltable.h
Symboltable/src/: Symboltable.cpp
lib/: CMakeLists.txt
lib/automat/: CMakeLists.txt
lib/automat/include/: Automat.h  Stack.h  Syntax.h
lib/automat/src/: Automat.cpp  Stack.cpp  Syntax.cpp
lib/buffer/: CMakeLists.txt
lib/buffer/include/: Buffer.h
lib/buffer/src/: Buffer.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: Node.h  Parser.h
lib/parser/src/: Node.cpp  Parser.cpp
lib/scanner/: CMakeLists.txt
lib/scanner/include/: Information.h  Scanner.h  Token.h
lib/scanner/src/: Information.cpp  Scanner.cpp  Token.cpp
lib/symboltable/: CMakeLists.txt  makefile
lib/symboltable/include/: StringTab.h  Symboltable.h  SymtabEntry.h
lib/symboltable/src/: StringTab.cpp  Symboltable.cpp  SymtabEntry.cpp
src/: CMakeLists.txt
test/: AutomatTest.cpp  BufferTest.cpp  CMakeLists.txt  ParseAndAddCatchTests.cmake  ParserTest.cpp  ScannerTest.cpp  StringTabTest.cpp  SymboltableTest.cpp  parser0.txt  parser2.txt  parser3.txt  parser4.txt  parser5.txt  testconfig.h.in
test/data/test1/: parser0.txt  parser1.txt
test/data/test3/: arraytest.txt  conditions-test.txt  decls.txt  exp.txt  fib_calc.txt  ipsum.txt  long.txt  scanner.txt  scannerFile1.txt  scanner_test.txt  scanner_test2.txt  statement_ident.txt  statement_stmts.txt  statements.txt  statements2.txt
test/tests/: AutomatTest.cpp  BufferTest.cpp  ParserTest.cpp  ScannerTest.cpp  StringTabTest.cpp  SymboltableTest.cpp
test3/: arraytest2.txt  defuq.txt  eras_sieve.txt  op.txt  parser-test-if.txt  parser_test3  scannerFile2.txt  short.txt  signs.txt  statement_if.txt  statement_read.txt  statement_while_write.txt
